# ha-garmin

./: .gitignore  Makefile  README.md  pyproject.toml  test_add_data.py  test_fetch_data.py
.github/workflows/: ci.yml
src/ha_garmin/: __init__.py  auth.py  client.py  const.py  exceptions.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_fit.py  test_services.py
